--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/passport": "^10.2",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "phpoffice/phpword": "^0.18.2"
+        "phpoffice/phpword": "^0.18.2",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "werneckbh/laravel-qr-code": "^0.1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
