--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.5",
         "phpoffice/phpword": "^0.18.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "werneckbh/laravel-qr-code": "^0.1.3"
+        "werneckbh/laravel-qr-code": "^0.1.3",
+        "wisdom-diala/countrypkg-laravel": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
