--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/passport": "^10.2",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "phpoffice/phpword": "^0.18.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "werneckbh/laravel-qr-code": "^0.1.3",
